--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,50 @@
-# Node.js
+# Node.js dependencies and logs
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.DS_Store
-.env
-.idea/
-.vscode/
 *.log
 *.tgz
 *.zip
 *.rar
+
+# OS artifacts
+.DS_Store
+
+# Environment secrets
+.env
+**/.env
+*.env.local
+*.env.*
+!.env.example
+
+# IDE settings
+.idea/
+.vscode/
+
+# Runtime output
 pids/
 logs/
 results/
 tmp/
-coverage/
+
+# Build artifacts
 dist/
 build/
 public/build/
+coverage/
+coverage.json
 .nyc_output/
 .cache/
+*.tsbuildinfo
+
+# Tool caches kept local
 .eslintcache
 .prettierignore
 .prettierrc
+
+# Hardhat build products
+blockchain/artifacts/
+blockchain/cache/
+blockchain/typechain-types/
+blockchain/coverage/
