--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "supplychain-backend",
+  "name": "registration-registry-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon server.js"
+    "dev": "node --watch src/index.js",
+    "start": "node src/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "dotenv": "^17.2.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ethers": "^6.15.0",
     "express": "^4.21.2",
-    "pg": "^8.16.3"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.0",
+    "zod": "^3.23.8"
   }
 }
