refactor: standardize integrity + checkpoint persistence
- centralize checkpoint persistence via upsertCheckpointForRegistration()
- add generic integrityFactory and update checkpoint/product helpers
- reuse Pinata backup utility everywhere, clean up transactions
- fix registration schema cross-validation and normalisation bugs

--- a/.env.example
+++ b/.env.example
@@ -34,6 +34,7 @@ ENV_TARGET=ganache
 # PINATA_JWT=...
 # PINATA_API_KEY=...
 # PINATA_SECRET_API_KEY=...
+# DEFAULT_MAX_PAYLOAD_BYTES=8192
 
 # --------------------------------------------------------------------
 # Example Sepolia configuration (.env.sepolia)
@@ -60,3 +61,4 @@ ENV_TARGET=ganache
 # PINATA_JWT=...
 # PINATA_API_KEY=...
 # PINATA_SECRET_API_KEY=...
+# DEFAULT_MAX_PAYLOAD_BYTES=8192
