feat : implement product category and product backend

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ ENV_TARGET=ganache
 # CONTRACT_ADDRESS_REGISTRY=0x...
 # CONTRACT_ADDRESS_BATCH=0x...
 # CONTRACT_ADDRESS_PRODUCT=0x...
+# CONTRACT_ADDRESS_PACKAGE=0x...
 # CONTRACT_ADDRESS_CHECKPOINT=0x...
 # CONTRACT_ADDRESS_SHIPMENT=0x...
 # CONTRACT_ADDRESS_SHIPMENT_SEGMENT=0x...
@@ -51,6 +52,7 @@ ENV_TARGET=ganache
 # CONTRACT_ADDRESS_REGISTRY=0x...
 # CONTRACT_ADDRESS_BATCH=0x...
 # CONTRACT_ADDRESS_PRODUCT=0x...
+# CONTRACT_ADDRESS_PACKAGE=0x...
 # CONTRACT_ADDRESS_CHECKPOINT=0x...
 # CONTRACT_ADDRESS_SHIPMENT=0x...
 # CONTRACT_ADDRESS_SHIPMENT_SEGMENT=0x...
