--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,5 @@ ENV_TARGET=ganache
 # PINATA_API_KEY=...
 # PINATA_SECRET_API_KEY=...
 # DEFAULT_MAX_PAYLOAD_BYTES=8192
+# ACCESS_TOKEN_EXPIRY=24h
+# REFRESH_TOKEN_EXPIRY=7d
