--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ ENV_TARGET=ganache
 
 # Optional shared overrides
 # PORT=5000
+# HOST=0.0.0.0
 # DATABASE_URL=postgres://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 # PINATA_PROXY_URL=http://proxy.example:8080
 
